--- a/css/simple-grid.css
+++ b/css/simple-grid.css
@@ -173,22 +173,26 @@ p {
 }
 
 .row::after {
-	content: "";
-	display: table;
-	clear: both;
+  content: "";
+  display: table;
+  clear: both;
 }
 
 .hidden-sm {
   display: none;
 }
 
-@media only screen and (min-width: 33.75em) {  /* 540px */
+@media only screen and (min-width: 33.75em) {
+
+  /* 540px */
   .container {
     width: 80%;
   }
 }
 
-@media only screen and (min-width: 45em) {  /* 720px */
+@media only screen and (min-width: 45em) {
+
+  /* 720px */
   .col-1 {
     width: 4.33%;
   }
@@ -242,7 +246,9 @@ p {
   }
 }
 
-@media only screen and (min-width: 60em) { /* 960px */
+@media only screen and (min-width: 60em) {
+
+  /* 960px */
   .container {
     width: 75%;
     max-width: 60rem;
@@ -253,13 +259,16 @@ p {
 .flex {
   display: flex;
 }
+
 /*--justify content--*/
 .justify-start {
   justify-content: start;
 }
+
 .justify-center {
   justify-content: center;
 }
+
 .justify-end {
   justify-content: end;
 }
@@ -285,9 +294,11 @@ p {
 .align-start {
   align-items: start;
 }
+
 .align-center {
   align-items: center;
 }
+
 .align-end {
   align-items: end;
 }
