--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+/* fonts */
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
+
 /* default style */
 * {
     margin: 0;
@@ -6,7 +10,26 @@
 }
 
 body {
+    position: relative;
+    background-image: url("https://images.unsplash.com/photo-1542709111240-e9df0dd813b4?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=60&raw_url=true&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8ZGF5fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500");
+    background-repeat: no-repeat;
+    background-size: cover;
+    object-position: center;
     height: 100vh;
+    font-family: 'Fredoka One', cursive;
+    letter-spacing: 1px;
+}
+
+body::after {
+    position: absolute;
+    content: "";
+    background: #fff;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: .9;
 }
 
 li {
@@ -18,10 +41,12 @@ li {
     background: burlywood;
     width: 100%;
     height: 8vh;
+    border-radius: .25em;
 }
 
 .nav-bar h1 {
     font-size: 2em;
+    text-transform: uppercase;
 }
 
 /* content styling */
@@ -29,11 +54,17 @@ li {
     height: 100%;
 }
 
+.days-container {
+    gap: .5em;
+}
+
 .days-container li {
-    border: 1px solid #000;
-    height: 50px;
-    font-size: 1.15em;
+    border: 0.06em solid #dadce0;
+    height: 60px;
+    font-size: 1.2em;
     font-weight: 600;
+    border-radius: .25em;
+    background-color: white;
 }
 
 /* date input style */
@@ -42,27 +73,44 @@ li {
     font-weight: 600;
 }
 
-#first-date {
-    height: 2.5em;
+.date-containers label {
+    letter-spacing: .9px;
+    font-family: 'Patrick Hand', cursive;
 }
 
+#first-date,
 #second-date {
-    margin-top: 2px;
     height: 2.5em;
+    border: none;
+    border: 1px solid #444;
+    border-radius: .25em;
+    background: cornsilk;
+    padding: 5px;
+    cursor: pointer;
+    font-size: .9em;
+    font-weight: 500;
+    transition: all .5s ease-in;
 }
 
+#first-date:hover,
+#second-date:hover {
+    box-shadow: 0px 4px 6px #000;
+}
 
 /* days background colors */
 .purple {
-    background: purple;
+    background: purple !important;
+    color: #fff;
 }
 
 .red {
-    background: red;
+    background: red !important;
+    color: #fff;
 }
 
 .green {
-    background: green;
+    background: green !important;
+    color: #fff;
 }
 
 
@@ -77,15 +125,20 @@ li {
     .days-container {
         margin-top: 4em;
         flex-direction: row !important;
+
     }
 
     .days-container li {
         width: 200px;
+
     }
 
     .date-containers {
         margin: auto;
         width: 100%;
-        display: none;
+        flex-direction: row !important;
+        justify-content: center;
+        align-items: center;
+        gap: 3em;
     }
 }
